feat: add redisclient
